Compiler/A7_220101096.output
Terminals unused in grammar

    INVALID_TOKEN


State 44 conflicts: 5 reduce/reduce
State 56 conflicts: 2 shift/reduce


Grammar

    0 $accept: translation_units $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | CHARACTER_CONSTANT
    4                   | STRING_LITERAL
    5                   | FLOAT_CONSTANT
    6                   | ROUND_BRACE_OPEN expression ROUND_BRACE_CLOSE

    7 unary_expression: postfix_expression
    8                 | unary_operator unary_expression
    9                 | INC unary_expression
   10                 | DEC unary_expression

   11 postfix_expression: primary_expression
   12                   | postfix_expression INC
   13                   | postfix_expression DEC
   14                   | postfix_expression SQ_BRACE_OPEN expression SQ_BRACE_CLOSE
   15                   | postfix_expression ROUND_BRACE_OPEN argument_expression_list ROUND_BRACE_CLOSE
   16                   | postfix_expression ROUND_BRACE_OPEN ROUND_BRACE_CLOSE
   17                   | postfix_expression PTR IDENTIFIER

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 $@1: ε

   21 $@2: ε

   22 unary_operator: BITWISEAND $@1 BITWISEOR $@2 BITWISEXOR
   23               | STAR
   24               | PLUS
   25               | MINUS
   26               | EXCLAMATION

   27 multiplicative_expression: unary_expression
   28                          | multiplicative_expression STAR unary_expression
   29                          | multiplicative_expression DIVIDE unary_expression
   30                          | multiplicative_expression PERCENTAGE unary_expression

   31 additive_expression: multiplicative_expression
   32                    | additive_expression PLUS multiplicative_expression
   33                    | additive_expression MINUS multiplicative_expression

   34 relational_expression: additive_expression
   35                      | relational_expression LESS_THAN additive_expression
   36                      | relational_expression GREATER_THAN additive_expression
   37                      | relational_expression LTE_OP additive_expression
   38                      | relational_expression GTE_OP additive_expression

   39 equality_expression: relational_expression
   40                    | equality_expression EQ_OP relational_expression
   41                    | equality_expression NE_OP relational_expression

   42 and_expression: equality_expression
   43               | and_expression BITWISEAND equality_expression

   44 or_expression: and_expression
   45              | or_expression BITWISEOR and_expression

   46 xor_expression: or_expression
   47               | xor_expression BITWISEXOR or_expression

   48 logical_AND_expression: xor_expression
   49                       | logical_AND_expression AND_OP xor_expression

   50 logical_OR_expression: logical_AND_expression
   51                      | logical_OR_expression OR_OP logical_AND_expression

   52 conditional_expression: logical_OR_expression
   53                       | logical_OR_expression QUESTION_MARK expression COLON conditional_expression

   54 assignment_expression: conditional_expression
   55                      | shift_expression
   56                      | unary_expression EQ assignment_expression

   57 shift_expression: additive_expression
   58                 | shift_expression LSHIFT additive_expression
   59                 | shift_expression RSHIFT additive_expression

   60 expression: assignment_expression

   61 expression_opt: expression
   62               | ε

   63 declaration: type_specifier init_declarator SEMI_COLON

   64 init_declarator: declarator
   65                | declarator EQ initializer

   66 type_specifier: VOID
   67               | CHAR
   68               | INTEGER
   69               | FLOAT
   70               | CONST
   71               | BOOL
   72               | DO

   73 declarator: pointer_opt direct_declarator

   74 direct_declarator: IDENTIFIER
   75                  | direct_declarator SQ_BRACE_OPEN INTEGER_CONSTANT SQ_BRACE_CLOSE
   76                  | direct_declarator SQ_BRACE_OPEN SQ_BRACE_CLOSE
   77                  | direct_declarator ROUND_BRACE_OPEN parameter_list_opt ROUND_BRACE_CLOSE

   78 pointer: STAR

   79 pointer_opt: pointer
   80            | ε

   81 parameter_list_opt: parameter_list
   82                   | ε

   83 parameter_list: parameter_declaration
   84               | parameter_list COMMA parameter_declaration

   85 identifier_opt: IDENTIFIER
   86               | ε

   87 parameter_declaration: type_specifier pointer_opt identifier_opt

   88 initializer: assignment_expression

   89 statement: compound_statement
   90          | expression_statement
   91          | selection_statement
   92          | iteration_statement
   93          | jump_statement

   94 compound_statement: CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

   95 block_item_list_opt: block_item_list
   96                    | ε

   97 block_item_list: block_item
   98                | block_item_list block_item

   99 block_item: declaration
  100           | statement

  101 expression_statement: expression_opt SEMI_COLON

  102 selection_statement: IF ROUND_BRACE_OPEN expression ROUND_BRACE_CLOSE statement
  103                    | IF ROUND_BRACE_OPEN expression ROUND_BRACE_CLOSE statement ELSE statement

  104 iteration_statement: FOR ROUND_BRACE_OPEN expression_opt SEMI_COLON expression_opt SEMI_COLON expression_opt ROUND_BRACE_CLOSE statement
  105                    | WHILE ROUND_BRACE_OPEN expression ROUND_BRACE_CLOSE statement
  106                    | DO statement WHILE ROUND_BRACE_OPEN expression ROUND_BRACE_CLOSE SEMI_COLON

  107 jump_statement: RETURN expression_opt SEMI_COLON

  108 translation_units: translation_unit
  109                  | translation_units translation_unit

  110 translation_unit: function_definition
  111                 | declaration

  112 function_definition: type_specifier declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PTR (258) 17
    EQ (259) 56 65
    CURLY_BRACE_OPEN (260) 94
    CURLY_BRACE_CLOSE (261) 94
    ROUND_BRACE_OPEN (262) 6 15 16 77 102 103 104 105 106
    ROUND_BRACE_CLOSE (263) 6 15 16 77 102 103 104 105 106
    SQ_BRACE_OPEN (264) 14 75 76
    SQ_BRACE_CLOSE (265) 14 75 76
    COLON (266) 53
    SEMI_COLON (267) 63 101 104 106 107
    QUESTION_MARK (268) 53
    EQ_OP (269) 40
    NE_OP (270) 41
    LTE_OP (271) 37
    GTE_OP (272) 38
    AND_OP (273) 49
    OR_OP (274) 51
    LSHIFT (275) 58
    RSHIFT (276) 59
    INC (277) 9 12
    DEC (278) 10 13
    LESS_THAN (279) 35
    GREATER_THAN (280) 36
    BITWISEAND (281) 22 43
    BITWISEOR (282) 22 45
    BITWISEXOR (283) 22 47
    STAR (284) 23 28 78
    PLUS (285) 24 32
    MINUS (286) 25 33
    EXCLAMATION (287) 26
    DIVIDE (288) 29
    PERCENTAGE (289) 30
    COMMA (290) 19 84
    VOID (291) 66
    CHAR (292) 67
    INTEGER (293) 68
    FLOAT (294) 69
    CONST (295) 70
    BOOL (296) 71
    DO (297) 72 106
    IF (298) 102 103
    ELSE (299) 103
    FOR (300) 104
    RETURN (301) 107
    WHILE (302) 105 106
    IDENTIFIER (303) 1 17 74 85
    INTEGER_CONSTANT (304) 2 75
    CHARACTER_CONSTANT (305) 3
    STRING_LITERAL (306) 4
    FLOAT_CONSTANT (307) 5
    INVALID_TOKEN (308)


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    primary_expression (55)
        on left: 1 2 3 4 5 6
        on right: 11
    unary_expression (56)
        on left: 7 8 9 10
        on right: 8 9 10 27 28 29 30 56
    postfix_expression (57)
        on left: 11 12 13 14 15 16 17
        on right: 7 12 13 14 15 16 17
    argument_expression_list (58)
        on left: 18 19
        on right: 15 19
    unary_operator (59)
        on left: 22 23 24 25 26
        on right: 8
    $@1 (60)
        on left: 20
        on right: 22
    $@2 (61)
        on left: 21
        on right: 22
    multiplicative_expression (62)
        on left: 27 28 29 30
        on right: 28 29 30 31 32 33
    additive_expression (63)
        on left: 31 32 33
        on right: 32 33 34 35 36 37 38 57 58 59
    relational_expression (64)
        on left: 34 35 36 37 38
        on right: 35 36 37 38 39 40 41
    equality_expression (65)
        on left: 39 40 41
        on right: 40 41 42 43
    and_expression (66)
        on left: 42 43
        on right: 43 44 45
    or_expression (67)
        on left: 44 45
        on right: 45 46 47
    xor_expression (68)
        on left: 46 47
        on right: 47 48 49
    logical_AND_expression (69)
        on left: 48 49
        on right: 49 50 51
    logical_OR_expression (70)
        on left: 50 51
        on right: 51 52 53
    conditional_expression (71)
        on left: 52 53
        on right: 53 54
    assignment_expression (72)
        on left: 54 55 56
        on right: 18 19 56 60 88
    shift_expression (73)
        on left: 57 58 59
        on right: 55 58 59
    expression (74)
        on left: 60
        on right: 6 14 53 61 102 103 105 106
    expression_opt (75)
        on left: 61 62
        on right: 101 104 107
    declaration (76)
        on left: 63
        on right: 99 111
    init_declarator (77)
        on left: 64 65
        on right: 63
    type_specifier (78)
        on left: 66 67 68 69 70 71 72
        on right: 63 87 112
    declarator (79)
        on left: 73
        on right: 64 65 112
    direct_declarator (80)
        on left: 74 75 76 77
        on right: 73 75 76 77
    pointer (81)
        on left: 78
        on right: 79
    pointer_opt (82)
        on left: 79 80
        on right: 73 87
    parameter_list_opt (83)
        on left: 81 82
        on right: 77
    parameter_list (84)
        on left: 83 84
        on right: 81 84
    identifier_opt (85)
        on left: 85 86
        on right: 87
    parameter_declaration (86)
        on left: 87
        on right: 83 84
    initializer (87)
        on left: 88
        on right: 65
    statement (88)
        on left: 89 90 91 92 93
        on right: 100 102 103 104 105 106
    compound_statement (89)
        on left: 94
        on right: 89 112
    block_item_list_opt (90)
        on left: 95 96
        on right: 94
    block_item_list (91)
        on left: 97 98
        on right: 95 98
    block_item (92)
        on left: 99 100
        on right: 97 98
    expression_statement (93)
        on left: 101
        on right: 90
    selection_statement (94)
        on left: 102 103
        on right: 91
    iteration_statement (95)
        on left: 104 105 106
        on right: 92
    jump_statement (96)
        on left: 107
        on right: 93
    translation_units (97)
        on left: 108 109
        on right: 0 109
    translation_unit (98)
        on left: 110 111
        on right: 108 109
    function_definition (99)
        on left: 112
        on right: 110


State 0

    0 $accept: • translation_units $end

    VOID     shift, and go to state 1
    CHAR     shift, and go to state 2
    INTEGER  shift, and go to state 3
    FLOAT    shift, and go to state 4
    CONST    shift, and go to state 5
    BOOL     shift, and go to state 6
    DO       shift, and go to state 7

    declaration          go to state 8
    type_specifier       go to state 9
    translation_units    go to state 10
    translation_unit     go to state 11
    function_definition  go to state 12


State 1

   66 type_specifier: VOID •

    $default  reduce using rule 66 (type_specifier)


State 2

   67 type_specifier: CHAR •

    $default  reduce using rule 67 (type_specifier)


State 3

   68 type_specifier: INTEGER •

    $default  reduce using rule 68 (type_specifier)


State 4

   69 type_specifier: FLOAT •

    $default  reduce using rule 69 (type_specifier)


State 5

   70 type_specifier: CONST •

    $default  reduce using rule 70 (type_specifier)


State 6

   71 type_specifier: BOOL •

    $default  reduce using rule 71 (type_specifier)


State 7

   72 type_specifier: DO •

    $default  reduce using rule 72 (type_specifier)


State 8

  111 translation_unit: declaration •

    $default  reduce using rule 111 (translation_unit)


State 9

   63 declaration: type_specifier • init_declarator SEMI_COLON
  112 function_definition: type_specifier • declarator compound_statement

    STAR  shift, and go to state 13

    $default  reduce using rule 80 (pointer_opt)

    init_declarator  go to state 14
    declarator       go to state 15
    pointer          go to state 16
    pointer_opt      go to state 17


State 10

    0 $accept: translation_units • $end
  109 translation_units: translation_units • translation_unit

    $end     shift, and go to state 18
    VOID     shift, and go to state 1
    CHAR     shift, and go to state 2
    INTEGER  shift, and go to state 3
    FLOAT    shift, and go to state 4
    CONST    shift, and go to state 5
    BOOL     shift, and go to state 6
    DO       shift, and go to state 7

    declaration          go to state 8
    type_specifier       go to state 9
    translation_unit     go to state 19
    function_definition  go to state 12


State 11

  108 translation_units: translation_unit •

    $default  reduce using rule 108 (translation_units)


State 12

  110 translation_unit: function_definition •

    $default  reduce using rule 110 (translation_unit)


State 13

   78 pointer: STAR •

    $default  reduce using rule 78 (pointer)


State 14

   63 declaration: type_specifier init_declarator • SEMI_COLON

    SEMI_COLON  shift, and go to state 20


State 15

   64 init_declarator: declarator •
   65                | declarator • EQ initializer
  112 function_definition: type_specifier declarator • compound_statement

    EQ                shift, and go to state 21
    CURLY_BRACE_OPEN  shift, and go to state 22

    $default  reduce using rule 64 (init_declarator)

    compound_statement  go to state 23


State 16

   79 pointer_opt: pointer •

    $default  reduce using rule 79 (pointer_opt)


State 17

   73 declarator: pointer_opt • direct_declarator

    IDENTIFIER  shift, and go to state 24

    direct_declarator  go to state 25


State 18

    0 $accept: translation_units $end •

    $default  accept


State 19

  109 translation_units: translation_units translation_unit •

    $default  reduce using rule 109 (translation_units)


State 20

   63 declaration: type_specifier init_declarator SEMI_COLON •

    $default  reduce using rule 63 (declaration)


State 21

   65 init_declarator: declarator EQ • initializer

    ROUND_BRACE_OPEN    shift, and go to state 26
    INC                 shift, and go to state 27
    DEC                 shift, and go to state 28
    BITWISEAND          shift, and go to state 29
    STAR                shift, and go to state 30
    PLUS                shift, and go to state 31
    MINUS               shift, and go to state 32
    EXCLAMATION         shift, and go to state 33
    IDENTIFIER          shift, and go to state 34
    INTEGER_CONSTANT    shift, and go to state 35
    CHARACTER_CONSTANT  shift, and go to state 36
    STRING_LITERAL      shift, and go to state 37
    FLOAT_CONSTANT      shift, and go to state 38

    primary_expression         go to state 39
    unary_expression           go to state 40
    postfix_expression         go to state 41
    unary_operator             go to state 42
    multiplicative_expression  go to state 43
    additive_expression        go to state 44
    relational_expression      go to state 45
    equality_expression        go to state 46
    and_expression             go to state 47
    or_expression              go to state 48
    xor_expression             go to state 49
    logical_AND_expression     go to state 50
    logical_OR_expression      go to state 51
    conditional_expression     go to state 52
    assignment_expression      go to state 53
    shift_expression           go to state 54
    initializer                go to state 55


State 22

   94 compound_statement: CURLY_BRACE_OPEN • block_item_list_opt CURLY_BRACE_CLOSE

    CURLY_BRACE_OPEN    shift, and go to state 22
    ROUND_BRACE_OPEN    shift, and go to state 26
    INC                 shift, and go to state 27
    DEC                 shift, and go to state 28
    BITWISEAND          shift, and go to state 29
    STAR                shift, and go to state 30
    PLUS                shift, and go to state 31
    MINUS               shift, and go to state 32
    EXCLAMATION         shift, and go to state 33
    VOID                shift, and go to state 1
    CHAR                shift, and go to state 2
    INTEGER             shift, and go to state 3
    FLOAT               shift, and go to state 4
    CONST               shift, and go to state 5
    BOOL                shift, and go to state 6
    DO                  shift, and go to state 56
    IF                  shift, and go to state 57
    FOR                 shift, and go to state 58
    RETURN              shift, and go to state 59
    WHILE               shift, and go to state 60
    IDENTIFIER          shift, and go to state 34
    INTEGER_CONSTANT    shift, and go to state 35
    CHARACTER_CONSTANT  shift, and go to state 36
    STRING_LITERAL      shift, and go to state 37
    FLOAT_CONSTANT      shift, and go to state 38

    CURLY_BRACE_CLOSE  reduce using rule 96 (block_item_list_opt)
    $default           reduce using rule 62 (expression_opt)

    primary_expression         go to state 39
    unary_expression           go to state 40
    postfix_expression         go to state 41
    unary_operator             go to state 42
    multiplicative_expression  go to state 43
    additive_expression        go to state 44
    relational_expression      go to state 45
    equality_expression        go to state 46
    and_expression             go to state 47
    or_expression              go to state 48
    xor_expression             go to state 49
    logical_AND_expression     go to state 50
    logical_OR_expression      go to state 51
    conditional_expression     go to state 52
    assignment_expression      go to state 61
    shift_expression           go to state 54
    expression                 go to state 62
    expression_opt             go to state 63
    declaration                go to state 64
    type_specifier             go to state 65
    statement                  go to state 66
    compound_statement         go to state 67
    block_item_list_opt        go to state 68
    block_item_list            go to state 69
    block_item                 go to state 70
    expression_statement       go to state 71
    selection_statement        go to state 72
    iteration_statement        go to state 73
    jump_statement             go to state 74


State 23

  112 function_definition: type_specifier declarator compound_statement •

    $default  reduce using rule 112 (function_definition)


State 24

   74 direct_declarator: IDENTIFIER •

    $default  reduce using rule 74 (direct_declarator)


State 25

   73 declarator: pointer_opt direct_declarator •
   75 direct_declarator: direct_declarator • SQ_BRACE_OPEN INTEGER_CONSTANT SQ_BRACE_CLOSE
   76                  | direct_declarator • SQ_BRACE_OPEN SQ_BRACE_CLOSE
   77                  | direct_declarator • ROUND_BRACE_OPEN parameter_list_opt ROUND_BRACE_CLOSE

    ROUND_BRACE_OPEN  shift, and go to state 75
    SQ_BRACE_OPEN     shift, and go to state 76

    $default  reduce using rule 73 (declarator)


State 26

    6 primary_expression: ROUND_BRACE_OPEN • expression ROUND_BRACE_CLOSE

    ROUND_BRACE_OPEN    shift, and go to state 26
    INC                 shift, and go to state 27
    DEC                 shift, and go to state 28
    BITWISEAND          shift, and go to state 29
    STAR                shift, and go to state 30
    PLUS                shift, and go to state 31
    MINUS               shift, and go to state 32
    EXCLAMATION         shift, and go to state 33
    IDENTIFIER          shift, and go to state 34
    INTEGER_CONSTANT    shift, and go to state 35
    CHARACTER_CONSTANT  shift, and go to state 36
    STRING_LITERAL      shift, and go to state 37
    FLOAT_CONSTANT      shift, and go to state 38

    primary_expression         go to state 39
    unary_expression           go to state 40
    postfix_expression         go to state 41
    unary_operator             go to state 42
    multiplicative_expression  go to state 43
    additive_expression        go to state 44
    relational_expression      go to state 45
    equality_expression        go to state 46
    and_expression             go to state 47
    or_expression              go to state 48
    xor_expression             go to state 49
    logical_AND_expression     go to state 50
    logical_OR_expression      go to state 51
    conditional_expression     go to state 52
    assignment_expression      go to state 61
    shift_expression           go to state 54
    expression                 go to state 77


State 27

    9 unary_expression: INC • unary_expression

    ROUND_BRACE_OPEN    shift, and go to state 26
    INC                 shift, and go to state 27
    DEC                 shift, and go to state 28
    BITWISEAND          shift, and go to state 29
    STAR                shift, and go to state 30
    PLUS                shift, and go to state 31
    MINUS               shift, and go to state 32
    EXCLAMATION         shift, and go to state 33
    IDENTIFIER          shift, and go to state 34
    INTEGER_CONSTANT    shift, and go to state 35
    CHARACTER_CONSTANT  shift, and go to state 36
    STRING_LITERAL      shift, and go to state 37
    FLOAT_CONSTANT      shift, and go to state 38

    primary_expression  go to state 39
    unary_expression    go to state 78
    postfix_expression  go to state 41
    unary_operator      go to state 42


State 28

   10 unary_expression: DEC • unary_expression

    ROUND_BRACE_OPEN    shift, and go to state 26
    INC                 shift, and go to state 27
    DEC                 shift, and go to state 28
    BITWISEAND          shift, and go to state 29
    STAR                shift, and go to state 30
    PLUS                shift, and go to state 31
    MINUS               shift, and go to state 32
    EXCLAMATION         shift, and go to state 33
    IDENTIFIER          shift, and go to state 34
    INTEGER_CONSTANT    shift, and go to state 35
    CHARACTER_CONSTANT  shift, and go to state 36
    STRING_LITERAL      shift, and go to state 37
    FLOAT_CONSTANT      shift, and go to state 38

    primary_expression  go to state 39
    unary_expression    go to state 79
    postfix_expression  go to state 41
    unary_operator      go to state 42


State 29

   22 unary_operator: BITWISEAND • $@1 BITWISEOR $@2 BITWISEXOR

    $default  reduce using rule 20 ($@1)

    $@1  go to state 80


State 30

   23 unary_operator: STAR •

    $default  reduce using rule 23 (unary_operator)


State 31

   24 unary_operator: PLUS •

    $default  reduce using rule 24 (unary_operator)


State 32

   25 unary_operator: MINUS •

    $default  reduce using rule 25 (unary_operator)


State 33

   26 unary_operator: EXCLAMATION •

    $default  reduce using rule 26 (unary_operator)


State 34

    1 primary_expression: IDENTIFIER •

    $default  reduce using rule 1 (primary_expression)


State 35

    2 primary_expression: INTEGER_CONSTANT •

    $default  reduce using rule 2 (primary_expression)


State 36

    3 primary_expression: CHARACTER_CONSTANT •

    $default  reduce using rule 3 (primary_expression)


State 37

    4 primary_expression: STRING_LITERAL •

    $default  reduce using rule 4 (primary_expression)


State 38

    5 primary_expression: FLOAT_CONSTANT •

    $default  reduce using rule 5 (primary_expression)


State 39

   11 postfix_expression: primary_expression •

    $default  reduce using rule 11 (postfix_expression)


State 40

   27 multiplicative_expression: unary_expression •
   56 assignment_expression: unary_expression • EQ assignment_expression

    EQ  shift, and go to state 81

    $default  reduce using rule 27 (multiplicative_expression)


State 41

    7 unary_expression: postfix_expression •
   12 postfix_expression: postfix_expression • INC
   13                   | postfix_expression • DEC
   14                   | postfix_expression • SQ_BRACE_OPEN expression SQ_BRACE_CLOSE
   15                   | postfix_expression • ROUND_BRACE_OPEN argument_expression_list ROUND_BRACE_CLOSE
   16                   | postfix_expression • ROUND_BRACE_OPEN ROUND_BRACE_CLOSE
   17                   | postfix_expression • PTR IDENTIFIER
